--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "API built with Node.js for client-side",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:debug": "nodemon index.js"
   },
   "author": "JeffeVargasP",
   "license": "ISC",
